UI Fix: Mobile View extra white space at bottom

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -4,23 +4,34 @@
   box-sizing: border-box;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  margin: 0;
-  padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
 
 .app {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   overflow: hidden;
+  position: relative;
 }
 
 #root {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
